[gd_scene load_steps=9 format=3 uid="uid://bcerc3aneg86g"]

[ext_resource type="Script" path="res://Menu.gd" id="1_ny46p"]
[ext_resource type="Texture2D" uid="uid://cnu4w08dwtrba" path="res://Pause Option Logos Start A.png" id="2_p0w7j"]
[ext_resource type="Texture2D" uid="uid://drbmbgi3yld5j" path="res://Pause Option Logos Quit.png" id="3_ir2bf"]
[ext_resource type="PackedScene" uid="uid://dk28qje72fe31" path="res://pause_button.tscn" id="4_vmsns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w4c4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chkyn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvo00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lltm0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ny46p")

[node name="Start_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 489.0
offset_top = 253.0
offset_right = 749.0
offset_bottom = 511.0
tooltip_text = "Start"
theme_override_styles/normal = SubResource("StyleBoxEmpty_w4c4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_chkyn")
text = "
"
icon = ExtResource("2_p0w7j")

[node name="Quit" type="Button" parent="."]
process_mode = 3
visible = false
layout_mode = 2
offset_left = 432.0
offset_top = 308.0
offset_right = 692.0
offset_bottom = 566.0
tooltip_text = "Quit
"
theme_override_styles/normal = SubResource("StyleBoxEmpty_dvo00")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lltm0")
icon = ExtResource("3_ir2bf")

[node name="Pause_Button" parent="." instance=ExtResource("4_vmsns")]
visible = false
layout_mode = 1
offset_left = 226.0
offset_top = 249.0
offset_right = -354.68
offset_bottom = -536.88

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
